# apwf

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml  requirements.txt  setup.cfg
daq_scripts/: sim-daq.sh
docs/: requirements.txt
docs/src/: config.py
src/apwf/: __init__.py
src/apwf/flows/: automate_helper.py
src/apwf/tools/: executor_helper.py  fx_comp_helper.py  fx_daq_helper.py  gladier_helper.py  ptychodus_client.py  ptychodus_plot.py
tests/: config.yml  scattering.py  test_destination.py  test_funcx_service.py  test_wf_config.yml
tests/scripts/: Battery_2-IDD_Polaris_Cont-WF.ipynb  Continuous_APWF.ipynb  ptycho_wf_config.yml
tests/scripts/catalyst/: catalyst_reader_check.ipynb  catalyst_reader_helper.py  tike-catalyst-pinned.cmd  tike-catalyst-pinned.py
tests/scripts/others/: 2021-07-23 Beamtime Workflow Execution Xu 1000 iter.ipynb  2021-07-23 Beamtime Workflow Execution Xu-Continuous-Polaris.ipynb  2021-07-23 Beamtime Workflow Execution Xu-Continuous.ipynb  2021-07-23 Beamtime Workflow Execution Xu.ipynb  2021-07-23 Beamtime Workflow Execution-Copy1.ipynb  2021-07-23 Beamtime Workflow Execution.ipynb  2021-10-28 26id Beamtime Workflow Execution Tekin-Continuous.ipynb  Diffraction_Pattern_Extract.ipynb  FlowUtilityFunctions.ipynb  analysis.ipynb  batch.py  catalyst-demo.ipynb  catalyst-smc-experiments-v2.ipynb  catalyst-smc-experiments.ipynb  coin16k-smc-experiments.ipynb  coin8k-smc-experiments.ipynb  globus_automate-wf_00-Simplified.ipynb  (+14 more)
wf_scripts/: Battery_2-IDD_Polaris_Cont-WF.ipynb  ptycho_wf_config.yml  wf_service_tests.ipynb
