[metadata]
name = apwf
url = #http://apwf.readthedocs.org
download_url = #http://github.com/tekinbicer/apwf.git
author =
    Tekin Bicer
author_email = tbicer@anl.gov
license = BSD 3-Clause License
classifiers =
    'Development Status :: 2 - Pre-Alpha'
    'Intended Audience :: Developers'
    'Intended Audience :: Science/Research'
    'License :: OSI Approved :: BSD License'
    'Natural Language :: English'
    'Operating System :: OS Independent'
    'Programming Language :: Python :: 3 :: Only'
    'Topic :: Scientific/Engineering'
long_description = file: README.rst, LICENSE

[options]
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where=src

[yapf]
based_on_style = google
split_before_logical_operator = true
SPLIT_COMPLEX_COMPREHENSION = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_DOT = true

[pycodestyle]
max-line-length=80
count=true

[pydocstyle]
ignore = D100,D213,D416,D203,D107,D105